[gd_scene load_steps=8 format=2]

[ext_resource path="res://font/NotoSerifCJKjp-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://font/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://script/PlayerInfo.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 1
outline_color = Color( 0.533333, 0.52549, 0.52549, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=2]
resource_local_to_scene = true
color = Color( 1, 0.0784314, 0.0784314, 1 )
thickness = 6

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 12
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -898.0
margin_bottom = -512.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 83.1548
margin_right = 131.155
margin_bottom = 70.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.203922, 0.203922, 0.203922, 1 )
text = "Êù±"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 126.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "XGN"
valign = 1

[node name="HSeparator" type="HSeparator" parent="."]
margin_right = 126.0
margin_bottom = 93.0
custom_styles/separator = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_top = 47.0
margin_right = 126.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.898039, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "35,000"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_top = 70.0
margin_right = 126.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 1, 0.133333, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "+12,000"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
